--- a/src/app/ZS/mine/template/MineComponent.html
+++ b/src/app/ZS/mine/template/MineComponent.html
@@ -61,56 +61,56 @@
         <h6>最近订单： </h6>
         <table>
           <thead>
-            <tr>
-              <th width="40%">商品</th>
-              <th width="10%">价格</th>
-              <th width="10%">数量</th>
-              <th width="10%">商品操作</th>
-              <th width="10%">实付金额</th>
-              <th width="10%">交易操作</th>
-              <th width="10%">操作</th>
-            </tr>
+          <tr>
+            <th width="40%">商品</th>
+            <th width="10%">价格</th>
+            <th width="10%">数量</th>
+            <th width="10%">商品操作</th>
+            <th width="10%">实付金额</th>
+            <th width="10%">交易操作</th>
+            <th width="10%">操作</th>
+          </tr>
           </thead>
           <tbody>
-            <tr></tr>
-            <tr>
-              <td colspan="7">
-                <span class="l-order-time">2017-07-22</span>
-                <span>订单号:170714064473</span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <ul>
-                  <li class="l-order-img">
-                    <a routerLink="/index/product-details">
-                      <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
-                    </a>
-                  </li>
-                  <li class="l-order-name">
-                    <a routerLink="/index/product-details">台湾凤梨</a>
-                  </li>
-                </ul>
-              </td>
-              <td>
-                <p>￥39.90</p>
-              </td>
-              <td>
-                <p>1</p>
-              </td>
-              <td>
-                <p>退款/退货</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <p>￥59.90</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <p>已取消</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <P>查看订单</P>
-              </td>
-            </tr>
+          <tr></tr>
+          <tr>
+            <td colspan="7">
+              <span class="l-order-time">2017-07-22</span>
+              <span>订单号:170714064473</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <ul>
+                <li class="l-order-img">
+                  <a routerLink="/index/product-details">
+                    <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
+                  </a>
+                </li>
+                <li class="l-order-name">
+                  <a routerLink="/index/product-details">台湾凤梨</a>
+                </li>
+              </ul>
+            </td>
+            <td>
+              <p>￥39.90</p>
+            </td>
+            <td>
+              <p>1</p>
+            </td>
+            <td>
+              <p>退款/退货</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <p>￥59.90</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <p>已取消</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <P>查看订单</P>
+            </td>
+          </tr>
           </tbody>
         </table>
       </div>
@@ -153,56 +153,56 @@
       <div class="l-recent-order">
         <table>
           <thead>
-            <tr>
-              <th width="40%">商品</th>
-              <th width="10%">价格</th>
-              <th width="10%">数量</th>
-              <th width="10%">商品操作</th>
-              <th width="10%">实付金额</th>
-              <th width="10%">交易操作</th>
-              <th width="10%">操作</th>
-            </tr>
+          <tr>
+            <th width="40%">商品</th>
+            <th width="10%">价格</th>
+            <th width="10%">数量</th>
+            <th width="10%">商品操作</th>
+            <th width="10%">实付金额</th>
+            <th width="10%">交易操作</th>
+            <th width="10%">操作</th>
+          </tr>
           </thead>
           <tbody>  <!-- 遍历tbody -->
-            <tr></tr>
-            <tr>
-              <td colspan="7">
-                <span class="l-order-time">2017-07-22</span>
-                <span>订单号:170714064473</span>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <ul>
-                  <li class="l-order-img">
-                    <a href="#/product-details">
-                      <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
-                    </a>
-                  </li>
-                  <li class="l-order-name">
-                    <a href="#/product-details">台湾凤梨</a>
-                  </li>
-                </ul>
-              </td>
-              <td>
-                <p>￥39.90</p>
-              </td>
-              <td>
-                <p>1</p>
-              </td>
-              <td>
-                <p>退款/退货</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <p>￥59.90</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <p>已取消</p>
-              </td>
-              <td colspan="1" style="border-right: 1px solid #ddd;">
-                <P>查看订单</P>
-              </td>
-            </tr>
+          <tr></tr>
+          <tr>
+            <td colspan="7">
+              <span class="l-order-time">2017-07-22</span>
+              <span>订单号:170714064473</span>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <ul>
+                <li class="l-order-img">
+                  <a href="#/product-details">
+                    <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
+                  </a>
+                </li>
+                <li class="l-order-name">
+                  <a href="#/product-details">台湾凤梨</a>
+                </li>
+              </ul>
+            </td>
+            <td>
+              <p>￥39.90</p>
+            </td>
+            <td>
+              <p>1</p>
+            </td>
+            <td>
+              <p>退款/退货</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <p>￥59.90</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <p>已取消</p>
+            </td>
+            <td colspan="1" style="border-right: 1px solid #ddd;">
+              <P>查看订单</P>
+            </td>
+          </tr>
           </tbody>
         </table>
       </div>
@@ -225,31 +225,31 @@
           </tr>
           </thead>
           <tbody>
-            <tr></tr>
-            <tr class="l-integral-detail">  <!-- 遍历tr.l-integral-detail -->
-              <td>
-                <ul>
-                  <li class="l-integral-img">
-                    <a href="#/product-details">
-                      <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
-                    </a>
-                  </li>
-                  <li class="l-integral-name">
-                    <a href="#/product-details">台湾凤梨</a>
-                    <p>编号：1003870002260814020</p>
-                  </li>
-                </ul>
-              </td>
-              <td>
-                <p style=" color: #64a131; font-size: 30px;">+5</p>
-              </td>
-              <td>
-                <p>2017年6月22日 14:43:48</p>
-              </td>
-              <td>
-                <p>交易获得</p>
-              </td>
-            </tr>
+          <tr></tr>
+          <tr class="l-integral-detail">  <!-- 遍历tr.l-integral-detail -->
+            <td>
+              <ul>
+                <li class="l-integral-img">
+                  <a href="#/product-details">
+                    <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
+                  </a>
+                </li>
+                <li class="l-integral-name">
+                  <a href="#/product-details">台湾凤梨</a>
+                  <p>编号：1003870002260814020</p>
+                </li>
+              </ul>
+            </td>
+            <td>
+              <p style=" color: #64a131; font-size: 30px;">+5</p>
+            </td>
+            <td>
+              <p>2017年6月22日 14:43:48</p>
+            </td>
+            <td>
+              <p>交易获得</p>
+            </td>
+          </tr>
           </tbody>
         </table>
       </div>
@@ -297,7 +297,64 @@
       </div>
     </div>
     <div class="l-per-right" [style.display]="textShow==5?'':'none'">
-      基本资料
+      <h6>基本信息</h6>
+      <form>
+        <div class="l-basic-information">
+          <ul>
+            <li class="l-basicinfo-pic">
+              <span>当前头像:</span>
+              <div>
+                <img src="https://imgjd2.fruitday.com/up_images/default_userpic.png">
+              </div>
+              <a>修改</a>
+            </li>
+            <li class="l-basicinfo-nickname">
+              <span class="pull-left">昵称</span>
+              <input class="pull-left basicname" value="左婷" type="text">
+            </li>
+            <li class="l-basicinfo-sex">
+              <span>性别</span>
+              <div class="l-csex">
+                <input type="checkbox">
+                <label>男</label>
+                <input type="checkbox">
+                <label>女</label>
+                <input type="checkbox" checked="checked">
+                <label>保密</label>
+              </div>
+            </li>
+            <li class="l-basicinfo-birth">
+              <span>生日</span>
+              <select class="l-birth-inpSel">
+                <option value="0">0</option>
+                <option value="1">1</option>
+              </select>
+              <div>年</div>
+              <select class="l-birth-inpSel">
+                <option value="0">0</option>
+                <option value="1">1</option>
+              </select>
+              <div>月</div>
+              <select class="l-birth-inpSel">
+                <option value="0">0</option>
+                <option value="1">1</option>
+                <option value="1">1</option>
+              </select>
+              <div>日</div>
+            </li>
+            <li class="l-basicinfo-telphone">
+              <span>手机</span>
+              <input type="text" disabled="disabled" value="18851191915">
+              <a >更换手机号</a>
+            </li>
+            <li class="l-basicinfo-mail">
+              <span>邮箱</span>
+              <input type="text" value="3298281467@qq.com">
+            </li>
+          </ul>
+          <div class="l-basic-submit btn btn-success">确认提交</div>
+        </div>
+      </form>
     </div>
     <div class="l-per-right" [style.display]="textShow==6?'':'none'">
       密码修改
