--- a/src/app/ZS/confirm/confirm.component.html
+++ b/src/app/ZS/confirm/confirm.component.html
@@ -2,7 +2,7 @@
   <div class="content-wrapper">
     <div class="top">
       <span class="title"> {{title}} </span>
-      <span (click)="$hideClick()">X</span>
+      <span class="hide-icon" (click)="$hideClick()">X</span>
     </div>
     <div class="content">
       <div class="logo" *ngIf="subTitle">
