--- a/src/app/ZS/mine/css/MineComponent.css
+++ b/src/app/ZS/mine/css/MineComponent.css
@@ -312,10 +312,10 @@
 }
 /* 基本资料 */
 .l-basic-information{
-  background: #f1f1f1;
+  /*background: #f1f1f1;*/
   border: 1px solid #ddd;
   min-height: 350px;
-  padding: 23px 0 50px 12px;
+  padding: 20px 0 50px 12px;
 }
 .l-basic-information ul li{
   height:30px;
@@ -443,7 +443,7 @@
   padding-left: 10px;
   border-radius: 5px;
 }
-.l-basic-information .l-basic-submit{
+.l-per-right .l-basic-submit{
   color: #fff;
   border-radius: 3px;
   display: inline-block;
@@ -451,8 +451,83 @@
   margin-left: 70px;
   float: left;
 }
-.l-basic-information .l-basic-submit:hover{
+.l-per-right .l-basic-submit:hover{
   background: #5e972e;
   outline: 0;
 
+}
+/* 密码修改 */
+.l-password-box{
+  border: 1px solid #ddd;
+  padding: 20px 0 70px 25px;
+}
+.l-password-box>div{
+  margin-left: 0;
+  margin-bottom: 10px;
+  height: 35px;
+}
+.l-password-box>div>label{
+  float: left;
+  font-weight: normal;
+  font-size: 14px;
+  color: #999;
+  margin-right: 25px;
+  line-height: 30px;
+}
+.l-password-box>div>label.sure-password{
+  margin-right: 12px;
+}
+.l-password-box>div>input{
+  float: left;
+  height: 30px;
+  width: 155px;
+  padding-left: 10px;
+  line-height: 30px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+/* 我的收藏 */
+.l-collection-content>table{
+  width: 100%;
+  color: #555;
+  font-size: 14px;
+}
+.l-collection-content>table>thead>tr{
+  border: 1px solid #ddd;
+  width: 100%;
+  height: 38px;
+  background: #f1f1f1;
+  margin-bottom: 8px;
+}
+.l-collection-content>table>thead>tr>th{
+  color: #999;
+  font-size: 14px;
+  font-weight: normal;
+  line-height: 38px;
+  text-align: center;
+  padding: 15px 10px;
+}
+.l-collection-content>table>tbody>tr:first-child{
+  height: 8px;
+}
+.l-collection-content>table>tbody>tr.l-integral-detail{
+  border: 1px solid #ddd;
+}
+.l-collection-content>table>tbody>tr>td{
+  padding-top: 10px;
+}
+.l-collection-content>table>tbody>tr>td>ul>li{
+  float: left;
+  padding-top: 0;
+  margin: 5px 5px;
+}
+.l-collection-content>table>tbody>tr>td:first-child a img{
+  width: 180px;
+  height: 100px;
+  margin-left: 30px;
+}
+.l-collection-content>table>tbody>tr>td>p>span{
+  color: #64A131;
+  margin-right: 5px;
+  cursor: pointer;
 }
