--- a/src/app/ZS/homepage-head/template/HomepageHeadComponent.html
+++ b/src/app/ZS/homepage-head/template/HomepageHeadComponent.html
@@ -28,11 +28,10 @@
         </nav>
       </div>
     <div class="homepage-head-three">
-        <label class="homepage-head-three-lab">我的购物车</label>
+      <label class="homepage-head-three-lab" ><a [routerLink]="['/balance-firstContent']">我的购物车</a></label>
         <img class="homepage-head-three-img" src="../../../../assets/fruit/biggouwuche.png">
     </div>
     </div>
   </div>
 </div>
-
 <router-outlet></router-outlet>
