--- a/src/app/ZS/balance-firstContent/balance-firstContent.html
+++ b/src/app/ZS/balance-firstContent/balance-firstContent.html
@@ -1,3 +1,4 @@
+<balanceHead></balanceHead>
 <div class="cart w-750">
 
   <div class="cart-filter-bar pt-50">
@@ -176,7 +177,7 @@
                商品  |  订单金额
             </span>
             <span class="f-all-order">￥207.70</span>
-            <a id="f-btngopay" class="go-pay">去结算</a>
+            <a id="f-btngopay" class="go-pay"  [routerLink]="['/balance-secondContent']">去结算</a>
           </div>
         </div>
       </li>
