--- a/src/app/ZS/fixed-packages/css/FixedPackagesComponent.css
+++ b/src/app/ZS/fixed-packages/css/FixedPackagesComponent.css
@@ -6,10 +6,11 @@
   padding-top: 26px;
 }
 .content .select .oc {
-  width: 100%;
+  width: 85%;
   padding-bottom: 6px;
   padding-top: 12px;
   border-bottom: 1px solid #ccc;
+  margin-left: 120px;
 }
 .content .select .oc.f-pai{
   border-bottom: 0;
@@ -32,6 +33,8 @@ h5, .h5 {
 }
 .content .select .f-select {
   width: 1230px;
+  margin-left: 40px;
+  margin-top: -22px;
 }
 .content .select .f-select .left {
   width: 48px;
@@ -79,6 +82,8 @@ a {
 /*列表*/
 .list{
   margin-top: 27px;
+  width: 85%;
+  margin-left: 120px;
 }
 .list .part{
   width: 100%;
