--- a/src/app/ZS/balance-firstContent/balance-firstContent.html
+++ b/src/app/ZS/balance-firstContent/balance-firstContent.html
@@ -1,4 +1,5 @@
 <balanceHead></balanceHead>
+<button (click)="makeRequest()"></button>
 <div class="cart w-750">
 
   <div class="cart-filter-bar pt-50">
