--- a/src/app/ZS/balance-sc-address/balanceScAddress.html
+++ b/src/app/ZS/balance-sc-address/balanceScAddress.html
@@ -31,9 +31,12 @@
         <label>
           <span class="VI-color1">*</span>手机号码
         </label>
-        <input type="text" class="inpText" maxlength="15" value="" id="name">
+        <input type="text" class="inpText" maxlength="15" value="" id="phone">
       </div>
-
+      <!--<div class="f-form-formitem clearfix">
+        <input type="checkbox" id="def" class="inpCheck";>
+        <label for="def" style="width:auto;">设为默认收货地址</label>
+      </div>-->
     </form>
   </div>
 </div>
