--- a/src/app/ZS/mine/template/MineComponent.html
+++ b/src/app/ZS/mine/template/MineComponent.html
@@ -230,7 +230,7 @@
             <td>
               <ul>
                 <li class="l-integral-img">
-                  <a href="#/product-details">
+                  <a routerLink="#/product-details" >
                     <img src="http://img.guocool.com/800X800/product/2017/06/23/c76c6087d3154f9aa86c23ad6be604d6.jpg">
                   </a>
                 </li>
@@ -413,7 +413,7 @@
             <td>
               <p>
                 <span>加入购物车</span>
-                <span style="color: #b1000f;" id="l-cancleFollow-btn" (click)="$remove_addr()">取消收藏</span>
+                <span style="color: #b1000f;" id="l-cancleFollow-btn" (click)="$remove_follow()">取消收藏</span>
               </p>
             </td>
           </tr>
